# Autonomous_Vehicle

./: LICENSE  README.md  네발로 기어가_주간 회의록.docx  회의록(3월 넷째 주).docx  회의록(3월 다섯째 주).docx  회의록(3월 둘째 주).docx  회의록(4월 둘째 주).docx  회의록(5월 첫째 주).docx
docs/Design-Document/: 설계문서 (1).hwp  설계문서.hwp
docs/weekly-schedule/: 네발로 기어가_개발일정표.xls
meeinglog/: 회의록(3월 셋째 주).docx  회의록(3월 첫째 주).docx  회의록(4월 넷째 주).docx  회의록(4월 셋째 주).docx  회의록(5월 둘째 주).docx
meetinglog/: 회의록(4월 첫째 주).docx  회의록(5월 넷째 주).docx  회의록(5월 셋째 주).docx
open-source/capstone_camera/cfg/: ImageCompensationParams.cfg
open-source/capstone_camera/launch/: capstone_intrinsic_camera_calibration.launch
open-source/capstone_detect/: CMakeLists.txt  package.xml
open-source/capstone_detect/launch/: capstone_detect_parking.launch
src/Open-source/capstone/: CMakeLists.txt  package.xml
src/Open-source/capstone_camera/: CMakeLists.txt  package.xml  setup.py
src/Open-source/capstone_camera/calibration/camera_calibration/: camera.yaml
src/Open-source/capstone_camera/calibration/extrinsic_calibration/: projection.yaml
src/Open-source/capstone_camera/calibration/intrinsic_calibration/: camerav2_320x240_30fps.yaml
src/Open-source/capstone_camera/cfg/: ImageProjectionParams.cfg
src/Open-source/capstone_camera/launch/: capstone_extrinsic_camera_calibration.launch
src/Open-source/capstone_camera/nodes/: image_compensation  image_projection
src/Open-source/capstone_control/: CMakeLists.txt  package.xml  setup.py
src/Open-source/capstone_control/launch/: capstone_control_lane.launch  cpastone_control_parking.launch
src/Open-source/capstone_control/nodes/: control_lane  control_parking
src/Open-source/capstone_detect/: setup.py
src/Open-source/capstone_detect/cfg/: DetectLaneParams.cfg
src/Open-source/capstone_detect/launch/: capstone_detect_lane.launch  capstone_detect_sign.launch
src/Open-source/capstone_detect/nodes/: detect_lane  detect_parking  detect_sign
src/Open-source/capstone_detect/param/lane/: lane.yaml
src/platooning/: CMakeLists.txt  package.xml
src/platooning/scripts/: platooning_node.py
