<?xml version="1.0"?>
<package format="2">
  <name>capstone_camera</name>
  <version>1.0.0</version>
  <description>
    TurtleBot3 AutoRace ROS package that controls Raspberry Pi Camera, and process the image
  </description>

  <author email="todo@todo.todo">todo</author>

  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>
</package>
